--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="APP">
 <head>
 <meta charset="UTF-8">
-<title>Document</title>
+<title>AngularJS: Services vs Factories vs Providers</title>
 </head>
 <body>
 <div ng-controller="theController">
@@ -17,15 +17,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.min.js"></script>
 <script>
 
-	function Service(){}
-	Service.prototype.log = function(){return "Service"}
-	var s = new Service;
-	console.log(s.log());
-
 	angular.module('APP',[])
 	.provider('theProvider', { $get: function(){ return "Provider"} })
 	.factory('theFactory', function(){return "Factory"})
-	.service('theService', Service)
+	//.service('theService', Service)
+	.service('theService', function(){
+		this.log = function(){return "Service"}
+	})
 	.value('theValue','Value')
 	.controller('theController', ['$scope', 'theProvider', 'theFactory', 'theService', 'theValue',
 		function($scope, theProvider, theFactory, theService, theValue){
